web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
/* stylelint-disable */
:root {
  --peacock-green: #376c74;
  --mediterranean-blue: #187e9b;
  --robin-egg: #d9f1f3;
  --wool: #fbfbf6;
  --light-gray: #d4d4d4;
  --darkest-gray: #1f1f1f;
  --dark-theme-gray-rgb: 78, 89, 89;
  --dark-theme-gray:#4E5959;
  --dark-theme-gray-selected:#edfbfb;
  --dark-theme-gray-lightest:#d0e0e0;
  --dark-theme-gray-lightest-rgb: 208, 224, 224;
  --dark-theme-gray-light:#606A6A;
  --dark-theme-gray-hover: #353d3d;
  --dark-primary-link: var(--wool);
  --dark-primary-link-hover: #ffffff;
  --dark-gin-icon-color: var(--wool);
  --dark-theme-gray-text-light:var(--wool);
  --dark-theme-gray-text-dark:var(--dark-theme-gray);
  --custom-button-color: var(--robin-egg);
  --custom-button-color-hover: var(--wool);
  --custom-button-color-text: var(--dark-theme-gray-hover);
  --custom-button-color-text-hover: var(--dark-theme-gray-hover);

  [data-gin-accent] {
    --gin-color-button-text: var(--dark-theme-gray);
    --gin-color-button-text-hover: var(--dark-theme-gray-hover);
  }

  [data-gin-accent="light_blue"] {
    --gin-color-primary-rgb: 217, 241, 243;
  /* --gin-color-primary-rgb: 78, 89, 89; */
    --gin-color-text-light: var(--wool);
    --gin-bg-item-hover: var(--dark-theme-gray-hover);
    --gin-bg-header: var(--dark-theme-gray);
    --gin-color-primary-active: var(--wool) !important;
    --gin-color-secondary: var(--mediterranean-blue) !important;
    --gin-color-primary-hover: var(--dark-theme-gray-hover) !important;
    --gin-color-primary-light: var(--gin-bg-item-hover) !important;
    --gin-border-color-layer: var(--light-gray) !important;
    --gin-bg-layer: var(--dark-theme-gray) !important;
    --gin-border-color-table-header: var(--darkest-gray) !important;
    --gin-bg-input: #fff !important;
    --gin-border-color-form-element: var(--light-gray) !important;
    --gin-bg-app: #707070;
    --gin-color-primary-light-active: var(--robin-egg);
    --gin-icon-color: var(--dark-gin-icon-color);
    --gin-color-button-text: var(--custom-button-color-text);
    --gin-bg-layer3: var(--dark-theme-gray-hover);
    --gin-color-title: var(--dark-theme-gray);
  }
}

/* stylelint-enable */

